message: accept NULL error argument in gst_message_parse_{error,warning,info}

And simplify code a bit while at it.

https://bugzilla.gnome.org/show_bug.cgi?id=693704